<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_recycler_view_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/offset" />