<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_item_main_view"
    android:layout_width="56dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <whiskarek.andrewshkrob.view.SquareImageView
        android:id="@+id/launcher_app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/colorAccent" />

    <TextView
        android:id="@+id/launcher_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/IconText"
        tools:text="Color"/>

</LinearLayout>