<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_main_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/offset"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/launcher_app_icon"
        android:layout_width="@dimen/fragment_icon_size"
        android:layout_height="@dimen/fragment_icon_size"
        android:gravity="left"
        android:layout_marginRight="@dimen/offset"
        tools:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset"
        android:orientation="vertical"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/launcher_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset"
            android:gravity="center_vertical|left"
            android:theme="@style/IconText"
            tools:text="Hello"/>

        <TextView
            android:id="@+id/launcher_app_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/text_size_default"
            android:lines="@integer/fragment_list_text_lines_body"
            android:theme="@style/IconText"
            tools:text="Hello"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_strip_detach_thickness"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

</LinearLayout>